Weird fix for multiple line breaks in headers...

--- a/web/app/themes/understrap-child/sass/theme/_child_theme.scss
+++ b/web/app/themes/understrap-child/sass/theme/_child_theme.scss
@@ -45,7 +45,7 @@ i {
     font-family: 'Playfair Display', serif;
     font-style: normal;
     font-weight: 100;
-    white-space: pre-line;
+    white-space: normal;
 }
 
 
